# fastauth

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  ROADMAP.md  TEST_COMMANDS.md  alembic.ini  conftest.py  gen_ref_pages.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.claude/: settings.local.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  license-updater.yml  publish.yml
adapters/custom/: index.html
adapters/memory/: index.html
adapters/sqlalchemy/: index.html
alembic/: env.py
alembic/versions/: 387359435b10_initial_schema.py  6521e99824e5_add_password_reset_tokens.py  afc6dc67ccd4_models_init.py
api-reference/: index.html
architecture/: index.html
changelog/: index.html
cli/: index.html
code_of_conduct/: index.html
concepts/adapters/: index.html
concepts/how-it-works/: index.html
concepts/providers/: index.html
concepts/tokens/: index.html
configuration/: index.html
contributing/: index.html
deployment/: index.html
docs/: README.md  api-reference.md  architecture.md  changelog.md  cli.md  code_of_conduct.md  configuration.md  contributing.md  deployment.md  index.md  installation.md  manual-testing.md  oauth.md  publishing.md  quickstart.md  testing.md  troubleshooting.md
docs/adapters/: custom.md  memory.md  sqlalchemy.md
docs/concepts/: adapters.md  how-it-works.md  providers.md  tokens.md
docs/css/: extra.css
docs/features/: account.md  cookies.md  email-verification.md  hooks.md  jwt.md  magic-links.md  oauth.md  passkeys.md  password-reset.md  rbac.md  tokens.md
docs/getting-started/: configuration.md  core-concepts.md  installation.md  quick-start.md  quickstart.md
docs/guides/: authentication.md  basic.md  cli.md  email.md  magic-links.md  microservice.md  oauth.md  passkeys.md  production.md  protecting-routes.md  rbac.md  sessions.md  testing.md
docs/providers/: credentials.md  github.md  google.md  magic-links.md
docs/reference/: index.md
examples/: README.md
examples/basic/: .env.example  README.md  main.py  requirements.txt
examples/custom-email-templates/: .env.example  .gitignore  README.md  preview_emails.py  requirements.txt  test_smtp.py
examples/custom_templates/: README.md  main.py
examples/full/: .env.example  README.md  generate_keys.py  main.py  requirements.txt
examples/jwt-microservice/: README.md  auth_service.py  requirements.txt  resource_service.py
examples/magic_link/: .env.example  README.md  main.py
examples/oauth/: .env.example  README.md  main.py  requirements.txt
examples/oauth-google/: .env.example  README.md  requirements.txt
examples/passkeys/: README.md  main.py  requirements.txt
examples/rbac-blog/: .env.example  README.md
examples/session-devices/: .env.example  README.md  requirements.txt
fastauth/: __init__.py  _compat.py  cli.py  main.py  settings.py
fastauth/api/: __init__.py  account.py  adapter_factory.py  auth.py  dependencies.py  oauth.py  schemas.py  sessions.py  utils.py
fastauth/core/: account.py  constants.py  email_verification.py  hashing.py  oauth.py  password_reset.py  refresh_tokens.py  roles.py  sessions.py  users.py
fastauth/db/: models.py  session.py
fastauth/email/: base.py  console.py  factory.py  smtp.py  utils.py
fastauth/providers/: __init__.py  base.py  google.py
fastauth/security/: email_verification.py  jwt.py  limits.py  oauth.py  password_reset.py  rate_limit.py  refresh.py  tokens.py
features/account/: index.html
features/cookies/: index.html
features/email-verification/: index.html
features/hooks/: index.html
features/jwt/: index.html
features/magic-links/: index.html
features/oauth/: index.html
features/passkeys/: index.html
features/password-reset/: index.html
features/rbac/: index.html
features/tokens/: index.html
getting-started/configuration/: index.html
getting-started/core-concepts/: index.html
getting-started/installation/: index.html
getting-started/quick-start/: index.html
getting-started/quickstart/: index.html
guides/authentication/: index.html
guides/basic/: index.html
guides/cli/: index.html
guides/email/: index.html
guides/magic-links/: index.html
guides/microservice/: index.html
guides/oauth/: index.html
guides/passkeys/: index.html
guides/production/: index.html
guides/protecting-routes/: index.html
guides/rbac/: index.html
guides/sessions/: index.html
guides/testing/: index.html
installation/: index.html
manual-testing/: index.html
oauth/: index.html
providers/credentials/: index.html
providers/github/: index.html
providers/google/: index.html
providers/magic-links/: index.html
publishing/: index.html
quickstart/: index.html
reference/: index.html
reference/cli/: index.html
scripts/: __init__.py  gen_api_docs.py  test_with_coverage.py
search/: search_index.json
testing/: index.html
tests/: conftest.py  test_app.py  test_cli.py  test_compat.py  test_config.py  test_packaging.py
troubleshooting/: index.html
(+221 files in other folders)
