[project]
name = "sreekarnv-fastauth-workspace"
version = "0.3.0"
description = "FastAuth monorepo workspace root"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sreekarnv-fastauth[standard,email,cli]",
]

[tool.uv.sources]
sreekarnv-fastauth = { workspace = true }

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.1",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.25.0",
    "mkdocs-gen-files>=0.5.0",
    "pre-commit>=4.5.1",
    "redis>=7.1.1",
    "aiosqlite>=0.22.1",
    "asyncpg>=0.31.0",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = []

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4"]
ignore = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
